--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">Fantasy_Basketball</string>
+    <string name="app_name">FastBreak Fantasy</string>
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="default_web_client_id">478992634864-u0birukkhnk95q4c3cj0o2gnnkhtt2fn.apps.googleusercontent.com</string>
     <string name="large_text">
